# Github-Crawler

./: .gitignore  Readme.md  input.json  output.json  pyproject.toml  pytest.ini
src/: config.py  crawler.py  input.json  main.py  proxy.py  schemas.py
tests/: test_crawler.py  test_main.py  test_proxy.py
tests/mock_html/: MockRepositorySearch.html  MockWikiSearch.html
