[project]
name = "github-crawler"
version = "0.1.0"
description = ""
authors = [
    {name = "Yevhenii Ravliuk", email = "41680988+ravlyuk@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.13, <4.0"
dependencies = [
    "httpx (>=0.28.1,<0.29.0)",
    "black (>=25.11.0,<26.0.0)",
    "pydantic (>=2.12.5,<3.0.0)",
    "lxml (>=6.0.2,<7.0.0)",
    "httpx-retries (>=0.4.5,<0.5.0)",
    "loguru (>=0.7.3,<0.8.0)",
    "pytest (>=9.0.1,<10.0.0)",
    "pytest-cov (>=7.0.0,<8.0.0)",
    "pytest-asyncio (>=1.3.0,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
asyncio_mode = "auto"
